fixup: editable-text: Prevent a tiny vertical overflow

--- a/scss/elements/_editableText.scss
+++ b/scss/elements/_editableText.scss
@@ -52,6 +52,7 @@ editable-text {
 		visibility: hidden;
 		margin-inline-start: 1px;
 		margin-top: 1px;
+		margin-bottom: 1px;
 		padding: var(--editable-text-padding-block) var(--editable-text-padding-inline);
 		font: inherit;
 		line-height: inherit;
